[gd_scene load_steps=2 format=3 uid="uid://d0evmhsvfjb12"]

[ext_resource type="Script" path="res://Scenes/GameOver.gd" id="1_l55ys"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_l55ys")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -201.0
offset_top = -88.0
offset_right = -161.0
offset_bottom = -48.0
scale = Vector2(81.1616, 21.7155)
color = Color(0.176419, 0.176419, 0.176419, 1)

[node name="Label" type="Label" parent="."]
offset_left = 472.0
offset_top = 208.0
offset_right = 555.0
offset_bottom = 234.0
scale = Vector2(4.48, 4.48)
text = "GameOver"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 567.0
offset_top = 330.0
offset_right = 767.0
offset_bottom = 434.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Try Again" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Tentar Novamente"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Try Again" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
